--- a/AStar-master-ver2/index.html
+++ b/AStar-master-ver2/index.html
@@ -5,7 +5,8 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
-	<script language="javascript" type="text/javascript" src="functions.js"></script>
+		<script language="javascript" type="text/javascript" src="functions.js"></script>
+		<script language="javascript" type="text/javascript" src="functions2.js"></script>
     <script language="javascript" type="text/javascript" src="spot.js"></script>
     <script language="javascript" type="text/javascript" src="controller.js"></script>
     <script language="javascript" type="text/javascript" src="map/mapfactory.js"></script>
